# NGEC-example

./: .gitignore  README.md  pyproject.toml
NGECx/: __init__.py  main.py
