[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "NGECx"
version = "0.1.0" 
authors = [
    { name="Andy Halterman", email="ahalterman0@gmail.com" }, 
]
description = "A pipeline for coding political events from text" 
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License", 
    "Operating System :: OS Independent",
]
dependencies = [
    'torch>=2.6.0,<3.0',
    'sentence_transformers>=5.0.0,<6.0',
    'vllm>=0.10.0,<1.0',
    'spacy==3.8.7',
]

[tool.setuptools.packages.find]
where = ["./"] # Search for packages in the current directory